--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.1",
+    "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -22,7 +22,7 @@
     "eslint-config-next": "14.0.1",
     "framer-motion": "^10.16.4",
     "postcss": "^8",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "swiper": "^11.0.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
